docs: fix overlapping sidebar bug, but I think this re-introduces a bug in IE where the sidenav position moves slightly left/right during scroll, but it's a worthwhile compromise and will investigate a diff solution for that later.

--- a/tools/droiddoc/templates-sdk/assets/css/fullscreen.css
+++ b/tools/droiddoc/templates-sdk/assets/css/fullscreen.css
@@ -179,7 +179,7 @@ body {
 
 #devdoc-nav.fixed,
 #devdoc-nav.fixed a.totop {
-  left:20px !important;
+  left:20px; /* !important ... for IE i think */
 }
 
 
